simplified text part

--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -263,7 +263,7 @@ In most of these experiments, participants were also asked to fill out questionn
 
 \begin{tabular}{llllllll}
 \toprule
-ExpID & \multicolumn{1}{c}{Time} & \multicolumn{1}{c}{Location} & \multicolumn{1}{c}{N} & \multicolumn{1}{c}{No..Trials.per.Cond.} & \multicolumn{1}{c}{Self.ref} & \multicolumn{1}{c}{Stim.for.Morality} & \multicolumn{1}{c}{Presenting.order}\\
+ExpID & \multicolumn{1}{c}{Time} & \multicolumn{1}{c}{Location} & \multicolumn{1}{c}{N} & \multicolumn{1}{c}{n.of.trials} & \multicolumn{1}{c}{Self.ref} & \multicolumn{1}{c}{Stim.for.Morality} & \multicolumn{1}{c}{Presenting.order}\\
 \midrule
 Exp\_1a\_1 & 2014-04 & Beijing & 38 (35) & 60 & NA & words & Simultaneously\\
 Exp\_1a\_2 & 2017-04 & Wenzhou & 18 (16) & 60 & NA & words & Simultaneously\\
@@ -393,29 +393,30 @@ For on data from experiments 4a and 4b, we further examined whether the self-ref
 
 To test whether moral characters are prioritized, we modeled data from experiments 1a, 1b, 1c, 2, 5, and 6a with three-level Bayesian hierarchical models. All these experiments shared similar designs and can be used for testing the prioritization effect of moral character. The valid and unique sample size is 192. Note that for both experiments 1a and 1b, two datasets were collected at different time points and locations, thus we treated them as independent samples. Here we only reported the population-level results of three-level Bayesian models, the detailed results of each experiment can be found in supplementary materials.
 
+For the \emph{d} prime, results from the Bayesian model revealed a robust effect of moral character. Shapes associated with good character (``good person'', ``kind person'' or a name associated with good behaviors) has higher sensitivity (median = 2.51, 95\% HDI = {[}2.23 2.78{]}) than shapes associated with neutral character (median = 2.19, 95\% HDI = {[}1.88 2.50{]}), \(median_{diff}\) = 0.31, 95\% HDI {[}0.00 0.64{]} , but we did not find differences between shapes associated with bad character (median = 2.25, 95\% HDI = {[}1.94 2.55{]}) and neutral character, \(median_{diff}\) = 0.05, 95\% HDI {[}-0.28 0.39{]}.
+
 \begin{figure}
 \centering
 \includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-bayes-meta-1-1.pdf}
 \caption{\label{fig:plot-bayes-meta-1}Effect of moral character on RT and d'}
 \end{figure}
 
-For the \emph{d} prime, results from the Bayesian model revealed a robust effect of moral character. Shapes associated with good character (``good person'', ``kind person'' or a name associated with good behaviors) has higher sensitivity (median = 2.51, 95\% HDI = {[}2.23 2.78{]}) than shapes associated with neutral character (median = 2.19, 95\% HDI = {[}1.88 2.50{]}), \(median_{diff}\) = 0.31, 95\% HDI {[}0.00 0.64{]} , but we did not find differences between shapes associated with bad character (median = 2.25, 95\% HDI = {[}1.94 2.55{]}) and neutral character, \(median_{diff}\) = 0.05, 95\% HDI {[}-0.28 0.39{]}.
+The results from reaction times data also found a robust effect of moral character for both match trials (see figure \ref{fig:plot-bayes-meta-1} C) and nonmatch trials (\textbf{see supplementary materials}). For match trials, shapes associated with good character has faster responses (median = 579.03 ms, 95\% HDI = {[}500.20 660.89{]}) than shapes associated with neutral character (median = 623.59 ms, 95\% HDI = {[}542.83 710.82{]}), \(median_{diff}\) = -44.19, 95\% HDI {[}-59.85 -30.36{]}. We also found that RTs to shapes associated with bad character (median = 640.86 ms, 95\% HDI = {[}561.22 729.99{]}) were slower as compared to the neutral character, \(median_{diff}\) = 16.85, 95\% HDI {[}2.82 30.10{]}.
 
-The results from reaction times data also found a robust effect of moral character for both match trials (see figure \ref{fig:plot-bayes-meta-1} C) and nonmatch trials (\textbf{see supplementary materials}). For match trials, shapes associated with good character has faster responses (median = 579.03 ms, 95\% HDI = {[}500.20 660.89{]}) than shapes associated with neutral character (median = 623.59 ms, 95\% HDI = {[}542.83 710.82{]}), \(median_{diff}\) = -44.19, 95\% HDI {[}-59.85 -30.36{]}. We also found that RTs to shapes associated with bad character (median = 640.86 ms, 95\% HDI = {[}561.22 729.99{]}) were slower as compared to the neutral character, \(median_{diff}\) = 16.85, 95\% HDI {[}2.82 30.10{]}. See Figure \ref{fig:plot-bayes-meta-1}.
-For the nonmatch trials, we found the advantage of good character: Shapes associated with good character (median = 654.16 ms, 95\% HDI = {[}573.12 742.91{]}) are faster than shapes associated with neutral (median = 671.81 ms, 95\% HDI = {[}588.33 762.65{]}), \(median_{diff}\) = -17.72 ms, 95\% HDI {[}-24.58 -11.19{]}. Similarly, the shapes associated with bad character (median = 676.93 ms, 95\% HDI = {[}590.23 765.67{]}) was responded slower than shapes associated with neutral character, \(median_{diff}\) = 16.85 ms, 95\% HDI {[}2.82 30.10{]}, but the effect size was smaller than the match trials (\textbf{see supplementary materials}).
+For the nonmatch trials, we found the advantage of good character: Shapes associated with good character (median = 654.16 ms, 95\% HDI = {[}573.12 742.91{]}) are faster than shapes associated with neutral (median = 671.81 ms, 95\% HDI = {[}588.33 762.65{]}), \(median_{diff}\) = -17.72 ms, 95\% HDI {[}-24.58 -11.19{]}. Similarly, the shapes associated with bad character (median = 676.93 ms, 95\% HDI = {[}590.23 765.67{]}) was responded slower than shapes associated with neutral character, \(median_{diff}\) = 5.20 ms, 95\% HDI {[}-0.04 10.66{]}, but the effect size was smaller than the match trials.
 
 \hypertarget{modulation-effect-self-referential-processing}{%
 \subsection{Modulation effect self-referential processing}\label{modulation-effect-self-referential-processing}}
 
 To test the modulation effect of self-referential processing, we also modeled data from three experiments (3a, 3b, and 6b) with three-level Bayesian models. These three experiments included 108 unique participants. We focused on the population-level effect of the interaction between self-referential processing and moral valence. Also, we examined the differences of differences, i.e., how the differences between good/bad characters and the neutral character under the self-referential conditions differ from that under other-referential conditions. The detailed results of each experiment can be found in supplementary materials.
 
+For the \emph{d} prime, we found an interaction between the moral valence and self-referential processing: the good-neutral differences are larger for the self-referential condition than for the other-referential condition (\(median_{diff}\) = 0.52; 95\% HDI = {[}-1.54 2.72{]}). However, this is not the case for the bad-neutral differences (\(median_{diff}\) = -0.01; 95\% HDI = {[}-1.55 2.37{]}). Further analyses revealed that the prioritization effect of good character (as compared to neutral) only appeared for self-referential conditions but not other-referential conditions. The estimated \emph{d} prime for good-self was greater than neutral-self (\(median_{diff}\) = 0.57; 95\% HDI = {[}-0.93 2.88{]}), \emph{d} prime for good-self was also greater than good-other condition (\(median_{diff}\) = 0.23; 95\% HDI = {[}-1.31 1.87{]}). The differences between bad-self and neutral-self, good-other and neutral-other, and bad-other and neutral-other are all centered around zero (see Figure \ref{fig:plot-bayes2}, B, D).
+
 \begin{figure}
 \centering
 \includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-bayes2-1.pdf}
 \caption{\label{fig:plot-bayes2}Interaction between moral character and self-referential}
 \end{figure}
-
-For the \emph{d} prime, we found an interaction between the moral valence and self-referential processing: the good-neutral differences are larger for the self-referential condition than for the other-referential condition (\(median_{diff}\) = 0.52; 95\% HDI = {[}-1.54 2.72{]}). However, this is not the case for the bad-neutral differences (\(median_{diff}\) = -0.01; 95\% HDI = {[}-1.55 2.37{]}). Further analyses revealed that the prioritization effect of good character (as compared to neutral) only appeared for self-referential conditions but not other-referential conditions. The estimated \emph{d} prime for good-self was greater than neutral-self (\(median_{diff}\) = 0.57; 95\% HDI = {[}-0.93 2.88{]}), \emph{d} prime for good-self was also greater than good-other condition (\(median_{diff}\) = ; 95\% HDI = {[} {]}). The differences between bad-self and neutral-self, good-other and neutral-other, and bad-other and neutral-other are all centered around zero (see Figure \ref{fig:plot-bayes2}, B, D).
 
 For the RTs of matched trials, we also found an interaction between moral valence and self-referential processing: the good-neutral differences were different for the self- and other-referential conditions (\(median_{diff}\) = -155.11; 95\% HDI = {[}-755.36 395.38{]}). However, this was not the case for bad-neutral differences (\(median_{diff}\) = -55.63; 95\% HDI = {[}-604.70 561.00{]}). Further analyses revealed a robust good-self prioritization effect as compared to neutral-self (\(median_{diff}\) = -57.91; 95\% HDI = {[}-224.43 41.14{]}) and good-other (\(median_{diff}\) = -107.21; 95\% HDI = {[}-369.05 92.95{]}) conditions. Similar to the results of \emph{d'}, we found that participants responded slower for both good character and bad character than for the neutral character when they referred to others. See Figure \ref{fig:plot-bayes2}.
 
@@ -442,7 +443,7 @@ In experiment 4b, where moral characters were task-relevant and ``self'' vs ``ot
 
 Most importantly, we found evidence that task-irrelevant labels, ``self'' or ``other'', also played a role. For shapes associated with good character, the \emph{d} prime was greater when shapes had a ``self'' inside than with ``other'' inside (\(mean_{diff}\) = 0.14, 95\% credible intervals {[}-0.02, 0.31{]}, BF = 12.07), but this effect did not occur when the target shape where associated with ``neutral'' (\(mean_{diff}\) = 0.04, 95\% HDI {[}-.11, .18{]}) or ``bad'' person (\(mean_{diff}\) = -.05, 95\% HDI{[}-.18, .09{]}).
 
-The same trend appeared for the RT data. For shapes associated with good character, having a ``self'' inside shapes reduced the reaction times as compared to having an ``other'' inside the shapes (\(mean_{diff}\) = -55 ms, 95\% HDI {[}-75, -35{]}), but this effect did not occur when the shapes were associated neutral (\(mean_{diff}\) = 10, 95\% HDI {[}1, 20{]}) or bad (\(mean_{diff}\) = 5, 95\% HDI {[}-16, 27{]}) person. See Figure \ref{fig:plot-exp4-all}.
+The same trend appeared for the RT data. For shapes associated with good character, having a ``self'' inside shapes reduced the reaction times as compared to having an ``other'' inside the shapes (\(mean_{diff}\) = -55 ms, 95\% HDI {[}-75, -35{]}), but this effect did not occur when the shapes were associated neutral (\(mean_{diff}\) = 10, 95\% HDI {[}1, 20{]}) or bad (\(mean_{diff}\) = 5, 95\% HDI {[}-16, 27{]}) person, See Figure \ref{fig:plot-exp4-all}.
 
 \hypertarget{discussion}{%
 \section{Discussion}\label{discussion}}
